# pysersic

./: .readthedocs.yaml  LICENSE  README.md  environment-lock.yml  environment.yml  paper.bib  paper.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pytest.yml
docs/: conf.py  requirements.txt
docs/source/: API-Summary.nblink  bulge-disk-decomposition.nblink  conf.py  example-fit.nblink  index.rst  inference.rst  install.rst  issues.rst  manual-priors.nblink  multi-source-fitting.nblink  multiband-exampe.nblink  rendering.rst  tipstricks.rst
examples/: API-Summary.ipynb  bulge-disk-decomposition.ipynb  example-fit.ipynb  example_fit.asdf  manual-priors.ipynb  multi-source-fitting.ipynb  multiband-example.ipynb  new-prior-handling.ipynb  pure-minimization.ipynb  spergel-prof.ipynb
examples/examp_gals/: copsf_59.1067_-30.4848.fits  cutout_59.1067_-30.4848.fits  gal1_im.npy  gal1_mask.npy  gal1_psf.npy  gal1_sig.npy  gal2_im.npy  gal2_mask.npy  gal2_psf.npy  gal2_sig.npy  gal3_im.npy  gal3_mask.npy  gal3_psf.npy  gal3_sig.npy
pysersic/: __init__.py  exceptions.py  galfit.py  loss.py  map.py  minimize.py  multiband.py  priors.py  profile_and_rendering_utils.py  profiles.py  pysersic.py  rendering.py  results.py
pysersic/utils/: __init__.py  galfit.py  loss.py  priors.py  rendering_utils.py  results.py  utils.py  visualization.py
tests/: test_fitters.py  test_loss.py  test_multiband.py  test_priors.py  test_renderers.py  test_utils.py
