[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pysersic"
authors = [
  {name = "Imad Pasha", email = "imad.pasha@yale.edu"},
  {name = "Tim Miller", email = "timothy.miller@northwestern.edu"}
]
requires-python = ">=3.7"
description = "A Tool for fitting sersic profiles in python"
license = {file = "LICENSE"}
dependencies = ['numpy',
        'scipy',
        'matplotlib',
        'pandas',
        'astropy',
        'corner',
        'photutils>=0.16',
        'jax',
        'numpyro',
        'arviz',
        'tqdm',
        'asdf',
        ]
version = "0.1.3"

[tool.setuptools]
packages = ['pysersic']
